# nedextract

./: .bumpversion.cfg  .gitignore  .prospector.yml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  conda-requirements.txt  coverage.xml  next_steps.md  project_setup.md  setup.cfg  setup.py  sonar-project.properties  xunit-result.xml
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  markdown-link-check.yml  sonarcloud.yml
Data/: anbis_clean.csv
Pretrained/: labels_sector_classifier.joblib
Tutorials/: Description_name_analysis.ipynb  Description_organisation_analysis.ipynb  Tutorial_auto_extract.ipynb  Tutorial_auto_nedextract_pipeline.ipynb
auto_extract/: Install_stanza_NL.py  NameAnalysis.py  __init__.py  classify_organisation.py  determinejobs.py  extract_SDG.py  extract_persons.py  extract_related_orgs.py  keywords.py  my_module.py  orgs_checks.py  preprocessing.py  read_pdf.py  run_auto_extract.py
classes/: determinejobs.py  keywords.py  nameanalysis.py  orgs_checks.py
docs/: Makefile  conf.py  index.rst  make.bat
nedextract/: __init__.py  classify_organisation.py  extract_persons.py  extract_related_orgs.py  preprocessing.py  read_pdf.py  run_nedextract.py
nedextract/utils/: __init__.py  determinejobs.py  keywords.py  nameanalysis.py  orgs_checks.py
tests/: test_anbis.csv  test_classify_organisations.py  test_excel.xlsx  test_extract_persons.py  test_extract_related_orgs.py  test_my_module.py  test_name_analysis.py  test_preprocessing.py  test_read_pdf.py  test_run_auto_extract.py  test_run_nedextract.py  tests_determinejobs.py  tests_orgs_checks.py
